<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.malone.starwarsapp.MovieDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/movie_detail_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="30sp"
            android:text="@string/movie_detail_title" />

        <ImageView
            android:id="@+id/movie_detail_thumbnail"
            android:layout_width="140dp"
            android:layout_height="230dp"
            android:layout_margin="10dp"
            android:layout_below="@+id/movie_detail_title"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/movie_detail_thumbnail_description" />

        <TextView
            android:id="@+id/movie_detail_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/movie_detail_thumbnail"
            android:text="@string/movie_detail_description"
            android:textSize="12sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/movie_detail_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_below="@+id/movie_detail_description">

            <RadioButton android:id="@+id/movie_detail_radio_as"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_seen_status_already_seen"
                android:onClick="onRadioChange" />
            <RadioButton android:id="@+id/movie_detail_radio_wts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_seen_status_want_to_see"
                android:onClick="onRadioChange" />
            <RadioButton android:id="@+id/movie_detail_radio_dnl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_seen_status_do_not_like"
                android:onClick="onRadioChange" />

        </RadioGroup>

        <Button
            android:id="@+id/movie_detail_submit_button"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_below="@id/movie_detail_radio_group"
            android:text="@string/submit_button" />

    </RelativeLayout>

</ScrollView>
